Fix appointment selection not working on mobile and touch devices

--- a/src/Organizer.SPA/src/app/event-viewer/event-viewer.component.scss
+++ b/src/Organizer.SPA/src/app/event-viewer/event-viewer.component.scss
@@ -12,6 +12,7 @@
   @include flex-center;
   overflow: hidden;
   user-select: none;
+  -webkit-touch-callout: none;
 
   &:hover {
     opacity: 0.7;
